# hatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  Taskfile.yaml  deny.toml  mise.toml
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_check_reader.rs
src/: app.rs  cli.rs  config.rs  dispatch.rs  lib.rs  logging.rs  main.rs
test/integration/: app_flow.rs
test/unit/: cli.rs  config_model.rs  dispatch.rs
