[package]
name = "hatch"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[test]]
name = "config_model"
path = "test/unit/config_model.rs"

[[test]]
name = "cli"
path = "test/unit/cli.rs"

[[test]]
name = "dispatch"
path = "test/unit/dispatch.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
